--- a/jobsearch.html
+++ b/jobsearch.html
@@ -1347,7 +1347,7 @@
             }
         }
 
-        // === FINAL FIXED PDF GENERATION WITH IMAGE PRELOADING ===
+        // === FINAL WORKING PDF GENERATION WITH IMAGES ===
         async function generateAndDownloadSurveyPDF(event) {
             event.preventDefault();
             if (!currentSurveyData || !currentSurveyData.sections) {
@@ -1361,10 +1361,9 @@
             btn.textContent = 'Generating PDF...';
 
             try {
-                const preloader = document.getElementById('image-preloader');
-                preloader.innerHTML = ''; // Clear previous
-
                 const pdfContent = document.getElementById('survey-pdf-content');
+                const preloader = document.getElementById('image-preloader');
+                preloader.innerHTML = '';
 
                 let html = `
                     <h1 style="text-align:center; font-size:24px; margin-bottom:10px;">Site Survey Report</h1>
@@ -1389,12 +1388,13 @@
                         if (field.photos && field.photos.length > 0) {
                             html += `<div style="margin:20px 0; page-break-inside:avoid;">`;
                             field.photos.forEach(url => {
-                                const imgId = 'pdfimg_' + Math.random().toString(36).substr(2, 9);
-                                html += `<img id="${imgId}" src="${url}" style="max-width:100%; height:auto; margin:10px 0; display:block; border:1px solid #ccc; border-radius:4px;" alt="${escapeHtml(field.question)}" />`;
-                                // Preload image
-                                const preloadImg = document.createElement('img');
-                                preloadImg.src = url;
-                                preloader.appendChild(preloadImg);
+                                html += `<img crossorigin="anonymous" src="${url}" style="max-width:100%; height:auto; margin:10px 0; display:block; border:1px solid #ccc; border-radius:4px;" alt="${escapeHtml(field.question)}" />`;
+
+                                // Preload with crossorigin
+                                const img = document.createElement('img');
+                                img.crossOrigin = 'anonymous';
+                                img.src = url;
+                                preloader.appendChild(img);
                             });
                             html += `</div>`;
                         }
@@ -1403,25 +1403,21 @@
 
                 pdfContent.innerHTML = html;
 
-                // Wait for ALL preloaded images to load
-                const preloadImages = preloader.querySelectorAll('img');
-                await Promise.all(Array.from(preloadImages).map(img => {
+                // Wait for all preloaded images
+                const images = preloader.querySelectorAll('img');
+                await Promise.all(Array.from(images).map(img => {
                     if (img.complete && img.naturalHeight !== 0) return Promise.resolve();
-                    return new Promise((resolve, reject) => {
+                    return new Promise(resolve => {
                         img.onload = resolve;
-                        img.onerror = () => {
-                            console.warn('Image failed to load (will appear blank):', img.src);
-                            resolve(); // Continue even if one fails
-                        };
+                        img.onerror = () => { console.warn('Image load failed:', img.src); resolve(); };
                     });
                 }));
 
-                // Now render with html2canvas
                 const canvas = await html2canvas(pdfContent, {
                     scale: 2,
                     useCORS: true,
-                    logging: false,
-                    allowTaint: true // Allows images even if CORS fails (they're already loaded)
+                    allowTaint: true,
+                    logging: false
                 });
 
                 const imgData = canvas.toDataURL('image/png');
@@ -1449,8 +1445,8 @@
                 pdf.save(`Site_Survey_${currentSurveyData.jobNumber || 'Unknown'}.pdf`);
 
             } catch (error) {
-                console.error('PDF generation failed:', error);
-                alert('Failed to generate PDF. Check console for details.');
+                console.error('PDF error:', error);
+                alert('Failed to generate PDF. Check console.');
             } finally {
                 btn.disabled = false;
                 btn.textContent = originalText;
@@ -1458,20 +1454,132 @@
         }
         window.generateAndDownloadSurveyPDF = generateAndDownloadSurveyPDF;
 
-        // Remaining functions (unchanged)
-        async function updateJobStatus(jobId, newStatus, buttonElement) { /* your original code */ }
-        function editLeadEngineer() { /* your original code */ }
-        function cancelEditEngineer() { /* your original code */ }
-        async function saveLeadEngineer() { /* your original code */ }
-        async function handleFileUpload(event, collectionName, jobNumber) { /* your original code */ }
-        function formatFileSize(bytes) { /* your original code */ }
-        function closeJobModal() { document.getElementById('job-modal').classList.remove('show'); }
-        function escapeHtml(text) { if (typeof text !== 'string') return text; const div = document.createElement('div'); div.textContent = text; return div.innerHTML; }
-        function formatDate(dateString) { if (!dateString) return 'N/A'; const date = new Date(dateString); return date.toLocaleDateString('en-GB', { day: '2-digit', month: 'short', year: 'numeric', hour: '2-digit', minute: '2-digit' }); }
-        function showStatus(message, type) { const status = document.getElementById('status-message'); status.textContent = message; status.className = `status-message ${type} show`; setTimeout(() => status.classList.remove('show'), 3000); }
+        // === ALL OTHER FUNCTIONS (unchanged from your original code) ===
+        async function updateJobStatus(jobId, newStatus, buttonElement) {
+            const messageDiv = document.getElementById('status-update-message');
+            try {
+                const { doc, updateDoc } = window.firebaseModules;
+                await updateDoc(doc(window.db, 'jobs', jobId), { status: newStatus, lastStatusUpdate: new Date().toISOString() });
+                const job = allJobs.find(j => j.id === jobId);
+                if (job) job.status = newStatus;
+                messageDiv.innerHTML = '<div class="status-update-message success">✓ Status updated successfully!</div>';
+                setTimeout(() => messageDiv.innerHTML = '', 3000);
+                document.querySelectorAll('.status-update-btn').forEach(b => b.classList.remove('current'));
+                if (buttonElement) buttonElement.classList.add('current');
+                displayResults();
+            } catch (error) {
+                console.error('Status update error:', error);
+                messageDiv.innerHTML = `<div class="status-update-message error">✗ Failed: ${error.message}</div>`;
+                setTimeout(() => messageDiv.innerHTML = '', 5000);
+            }
+        }
+        window.updateJobStatus = updateJobStatus;
 
-        document.getElementById('job-modal').addEventListener('click', (e) => { if (e.target.id === 'job-modal') closeJobModal(); });
+        function editLeadEngineer() {
+            if (isEditingEngineer) return;
+            isEditingEngineer = true;
+            const job = allJobs.find(j => j.id === currentJobId);
+            const container = document.getElementById('lead-engineer-container');
+            const options = leadEngineers.map(e => `<option value="${escapeHtml(e.name)}" ${e.name === job['Lead Engineer'] ? 'selected' : ''}>${escapeHtml(e.name)}</option>`).join('');
+            container.innerHTML = `
+                <select class="engineer-select" id="engineer-select"><option value="">-- Unassigned --</option>${options}</select>
+                <div class="save-cancel-btns">
+                    <button class="save-btn" onclick="saveLeadEngineer()">Save</button>
+                    <button class="cancel-btn" onclick="cancelEditEngineer()">Cancel</button>
+                </div>
+            `;
+        }
+
+        function cancelEditEngineer() {
+            isEditingEngineer = false;
+            const job = allJobs.find(j => j.id === currentJobId);
+            document.getElementById('lead-engineer-container').innerHTML = `
+                <span id="lead-engineer-display">${escapeHtml(job['Lead Engineer'] || 'Unassigned')}</span>
+                <button class="edit-btn" onclick="editLeadEngineer()">Change</button>
+            `;
+        }
+
+        async function saveLeadEngineer() {
+            const newEngineer = document.getElementById('engineer-select').value;
+            try {
+                const { doc, updateDoc } = window.firebaseModules;
+                await updateDoc(doc(window.db, 'jobs', currentJobId), { 'Lead Engineer': newEngineer || 'Unassigned' });
+                const job = allJobs.find(j => j.id === currentJobId);
+                job['Lead Engineer'] = newEngineer || 'Unassigned';
+                isEditingEngineer = false;
+                document.getElementById('lead-engineer-container').innerHTML = `
+                    <span id="lead-engineer-display">${escapeHtml(job['Lead Engineer'])}</span>
+                    <button class="edit-btn" onclick="editLeadEngineer()">Change</button>
+                `;
+                showStatus('Lead engineer updated successfully!', 'success');
+                displayResults();
+            } catch (error) {
+                console.error('Engineer update error:', error);
+                showStatus('Error: ' + error.message, 'error');
+            }
+        }
+
+        async function handleFileUpload(event, collectionName, jobNumber) {
+            const file = event.target.files[0];
+            if (!file) return;
+            const uploadButton = event.target.nextElementSibling;
+            const originalText = uploadButton.textContent;
+            uploadButton.innerHTML = '<div class="uploading-indicator">Uploading</div>';
+            uploadButton.disabled = true;
+            try {
+                const { ref, uploadBytes, getDownloadURL, addDoc, collection } = window.firebaseModules;
+                const storageRef = ref(window.storage, `${collectionName}/${jobNumber}_${file.name}`);
+                const snapshot = await uploadBytes(storageRef, file);
+                const downloadURL = await getDownloadURL(snapshot.ref);
+                await addDoc(collection(window.db, collectionName), {
+                    jobNumber, fileName: file.name, fileSize: file.size, downloadURL, uploadDate: new Date().toISOString()
+                });
+                showStatus('File uploaded successfully!', 'success');
+                await loadJobFiles(jobNumber);
+            } catch (error) {
+                console.error('Upload error:', error);
+                showStatus('Upload failed: ' + error.message, 'error');
+                uploadButton.textContent = originalText;
+                uploadButton.disabled = false;
+            }
+        }
+        window.handleFileUpload = handleFileUpload;
+
+        function formatFileSize(bytes) {
+            if (!bytes) return 'Unknown size';
+            const k = 1024;
+            const sizes = ['Bytes', 'KB', 'MB', 'GB'];
+            const i = Math.floor(Math.log(bytes) / Math.log(k));
+            return Math.round(bytes / Math.pow(k, i) * 100) / 100 + ' ' + sizes[i];
+        }
+
+        function closeJobModal() {
+            document.getElementById('job-modal').classList.remove('show');
+        }
+
+        function escapeHtml(text) {
+            if (typeof text !== 'string') return text;
+            const div = document.createElement('div');
+            div.textContent = text;
+            return div.innerHTML;
+        }
+
+        function formatDate(dateString) {
+            if (!dateString) return 'N/A';
+            const date = new Date(dateString);
+            return date.toLocaleDateString('en-GB', { day: '2-digit', month: 'short', year: 'numeric', hour: '2-digit', minute: '2-digit' });
+        }
+
+        function showStatus(message, type) {
+            const status = document.getElementById('status-message');
+            status.textContent = message;
+            status.className = `status-message ${type} show`;
+            setTimeout(() => status.classList.remove('show'), 3000);
+        }
+
+        document.getElementById('job-modal').addEventListener('click', (e) => {
+            if (e.target.id === 'job-modal') closeJobModal();
+        });
     </script>
 </body>
 </html>
-
