--- a/jobsearch.html
+++ b/jobsearch.html
@@ -1479,7 +1479,7 @@
                             
                             // Add each photo link
                             for (const url of field.photos) {
-                                const linkText = `🔗 Image ${imageCounter} - Click to view`;
+                                const linkText = `Image ${imageCounter} - Click to view`;
                                 
                                 pdf.setFontSize(10);
                                 pdf.setFont('helvetica', 'normal');
