--- a/calendar.html
+++ b/calendar.html
@@ -477,6 +477,7 @@
                         <option value="Richard Wiecko">Richard Wiecko</option>
                         <option value="Scott Carson">Scott Carson</option>
                         <option value="Stuart Whyte">Stuart Whyte</option>
+                        <option value="Subbies">Subbies</option>
                     </select>
                 </div>
                 <div class="form-group">
