--- a/calendar.html
+++ b/calendar.html
@@ -560,8 +560,17 @@
                     <label class="form-label" for="purpose-select">Purpose</label>
                     <select id="purpose-select" class="form-select" required>
                         <option value="">Select Purpose</option>
-                        <option value="WIP">WIP</option>
+                        <option value="1-2-1">1-2-1</option>
+                        <option value="Disciplinary">Disciplinary</option>
+                        <option value="Fact find investigation">Fact find investigation</option>
+                        <option value="Help with Jep">Help with Jep</option>
+                        <option value="Stock help">Stock help</option>
+                        <option value="Tool/PPE audit">Tool/PPE audit</option>
+                        <option value="Van audit">Van audit</option>
+                        <option value="Van swap">Van swap</option>
                         <option value="Vehicle Check">Vehicle Check</option>
+                        <option value="Welfare check">Welfare check</option>
+                        <option value="WIP">WIP</option>
                     </select>
                 </div>
                 <div class="form-group">
