--- a/conductsurveyv2.html
+++ b/conductsurveyv2.html
@@ -761,7 +761,7 @@
                             <div class="file-upload-icon">📸</div>
                             <div class="file-upload-text">Click to upload or drag and drop photos</div>
                         </div>
-                        <input type="file" id="loft-space-files" class="file-upload-input" multiple accept="image/*" capture="environment" required>
+                        <input type="file" id="loft-space-files" class="file-upload-input" multiple accept="image/*" capture="environment">
                         <div class="uploaded-files" id="loft-space-uploaded"></div>
                     </div>
 
@@ -902,7 +902,7 @@
                             <div class="file-upload-icon">📸</div>
                             <div class="file-upload-text">Click to upload or drag and drop photos</div>
                         </div>
-                        <input type="file" id="property-photos-files" class="file-upload-input" multiple accept="image/*" capture="environment" required>
+                        <input type="file" id="property-photos-files" class="file-upload-input" multiple accept="image/*" capture="environment">
                         <div class="uploaded-files" id="property-photos-uploaded"></div>
                     </div>
 
