--- a/teamview.html
+++ b/teamview.html
@@ -1330,7 +1330,7 @@
                 </div>
                 
                 <div class="nav-grid">
-                    <div class="myjobs.html" onclick="showView('search')">
+                    <div class="myjobs.html" class="nav-card">
                         <div class="nav-card-content">
                             <span class="nav-card-icon">🔍</span>
                             <h2>My Jobs</h2>
