--- a/conductsurvey.html
+++ b/conductsurvey.html
@@ -1359,7 +1359,7 @@
         };
         
         try {
-            await emailjs.send('service_sb6afh8', 'template_gsi9uir', emailData);
+            await emailjs.send('service_o75fskf', 'template_ijhp8qj', emailData);
             showAlert('Meter work notification sent successfully!', 'success');
         } catch (error) {
             console.error('Email send error:', error);
