--- a/auditfailtracker.html
+++ b/auditfailtracker.html
@@ -496,8 +496,7 @@
 
             const sortedPerformers = Object.entries(performerData)
                 .filter(([name, data]) => data.total > 0)
-                .sort((a, b) => b[1].total - a[1].total)
-                .slice(0, 10);
+                .sort((a, b) => b[1].total - a[1].total);
 
             if (sortedPerformers.length === 0) {
                 document.getElementById('topPerformers').style.display = 'none';
