--- a/auditfailtracker.html
+++ b/auditfailtracker.html
@@ -13,36 +13,55 @@
             box-sizing: border-box;
         }
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+            background: #0f0f23;
+            background-image: 
+                radial-gradient(circle at 20% 50%, rgba(120, 119, 198, 0.3), transparent 50%),
+                radial-gradient(circle at 80% 80%, rgba(74, 86, 226, 0.3), transparent 50%),
+                radial-gradient(circle at 40% 20%, rgba(138, 43, 226, 0.2), transparent 50%);
             min-height: 100vh;
-            padding: 20px;
+            padding: 40px 20px;
         }
         .container {
             max-width: 1400px;
             margin: 0 auto;
-            background: white;
-            border-radius: 16px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
+            background: rgba(255, 255, 255, 0.03);
+            backdrop-filter: blur(20px);
+            border-radius: 24px;
+            box-shadow: 
+                0 8px 32px 0 rgba(31, 38, 135, 0.37),
+                inset 0 1px 0 0 rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             overflow: hidden;
         }
         .header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, rgba(120, 119, 198, 0.2) 0%, rgba(74, 86, 226, 0.2) 100%);
+            backdrop-filter: blur(10px);
             color: white;
-            padding: 30px;
+            padding: 50px 30px;
             text-align: center;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
         }
         h1 {
-            font-size: 2em;
+            font-size: 2.5em;
             margin-bottom: 10px;
+            font-weight: 700;
+            background: linear-gradient(135deg, #a8c0ff 0%, #3f2b96 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+        .header p {
+            opacity: 0.8;
+            font-size: 1.1em;
         }
         .controls {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 20px;
             padding: 30px;
-            background: #f8f9fa;
-            border-bottom: 2px solid #e9ecef;
+            background: rgba(255, 255, 255, 0.02);
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
         }
         .control-group {
             display: flex;
@@ -51,23 +70,32 @@
         label {
             font-weight: 600;
             margin-bottom: 8px;
-            color: #495057;
+            color: rgba(255, 255, 255, 0.9);
             font-size: 0.9em;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
         input, select, button {
-            padding: 12px;
-            border: 2px solid #dee2e6;
-            border-radius: 8px;
+            padding: 14px;
+            border: 2px solid rgba(255, 255, 255, 0.1);
+            border-radius: 12px;
             font-size: 1em;
             transition: all 0.3s;
+            background: rgba(255, 255, 255, 0.05);
+            color: white;
         }
         input:focus, select:focus {
             outline: none;
-            border-color: #667eea;
-            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1);
+            border-color: #7F7FD5;
+            box-shadow: 0 0 0 4px rgba(127, 127, 213, 0.2);
+            background: rgba(255, 255, 255, 0.08);
+        }
+        select option {
+            background: #1a1a2e;
+            color: white;
         }
         button {
-            background: #667eea;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
             border: none;
             cursor: pointer;
@@ -76,11 +104,25 @@
             align-items: center;
             justify-content: center;
             gap: 8px;
+            position: relative;
+            overflow: hidden;
+        }
+        button::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.3), transparent);
+            transition: left 0.5s;
+        }
+        button:hover::before {
+            left: 100%;
         }
         button:hover {
-            background: #5568d3;
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 8px 20px rgba(102, 126, 234, 0.5);
         }
         .file-input-wrapper {
             position: relative;
@@ -95,18 +137,32 @@
             align-items: center;
             justify-content: center;
             gap: 8px;
-            padding: 12px;
-            background: #667eea;
+            padding: 14px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            border-radius: 8px;
+            border-radius: 12px;
             cursor: pointer;
             font-weight: 600;
             transition: all 0.3s;
+            position: relative;
+            overflow: hidden;
+        }
+        .file-input-label::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.3), transparent);
+            transition: left 0.5s;
+        }
+        .file-input-label:hover::before {
+            left: 100%;
         }
         .file-input-label:hover {
-            background: #5568d3;
             transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 8px 20px rgba(102, 126, 234, 0.5);
         }
         .stats {
             display: grid;
@@ -115,92 +171,140 @@
             padding: 30px;
         }
         .stat-card {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, rgba(102, 126, 234, 0.2) 0%, rgba(118, 75, 162, 0.2) 100%);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
             color: white;
-            padding: 20px;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            padding: 25px;
+            border-radius: 16px;
+            box-shadow: 0 8px 32px rgba(31, 38, 135, 0.2);
+            transition: all 0.3s;
+            position: relative;
+            overflow: hidden;
+        }
+        .stat-card::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle, rgba(255,255,255,0.1) 0%, transparent 70%);
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+        .stat-card:hover::before {
+            opacity: 1;
+        }
+        .stat-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 12px 40px rgba(102, 126, 234, 0.4);
         }
         .stat-label {
-            font-size: 0.9em;
-            opacity: 0.9;
-            margin-bottom: 8px;
+            font-size: 0.85em;
+            opacity: 0.8;
+            margin-bottom: 10px;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
         }
         .stat-value {
-            font-size: 2em;
+            font-size: 2.5em;
             font-weight: bold;
         }
         .chart-container {
             padding: 30px;
             position: relative;
             height: 500px;
+            background: rgba(255, 255, 255, 0.02);
         }
         .no-data {
             text-align: center;
             padding: 60px 20px;
-            color: #6c757d;
+            color: rgba(255, 255, 255, 0.6);
         }
         .no-data-icon {
             font-size: 4em;
             margin-bottom: 20px;
+            filter: grayscale(1) opacity(0.5);
+        }
+        .no-data h2 {
+            color: rgba(255, 255, 255, 0.9);
+            margin-bottom: 10px;
         }
         .top-performers {
             padding: 0 30px 30px;
         }
+        .top-performers h2 {
+            padding: 30px 0 20px;
+            color: rgba(255, 255, 255, 0.9);
+            font-size: 1.8em;
+        }
         .performer-card {
-            background: white;
-            border: 2px solid #e9ecef;
-            border-radius: 12px;
-            padding: 20px;
-            margin-bottom: 15px;
+            background: rgba(255, 255, 255, 0.03);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 16px;
+            padding: 25px;
+            margin-bottom: 20px;
             transition: all 0.3s;
         }
         .performer-card:hover {
-            border-color: #667eea;
-            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.2);
-            transform: translateY(-2px);
+            border-color: rgba(127, 127, 213, 0.5);
+            box-shadow: 0 8px 32px rgba(127, 127, 213, 0.3);
+            transform: translateY(-3px);
+            background: rgba(255, 255, 255, 0.05);
         }
         .performer-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 15px;
-            padding-bottom: 15px;
-            border-bottom: 2px solid #e9ecef;
+            margin-bottom: 20px;
+            padding-bottom: 20px;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
         }
         .performer-name {
-            font-size: 1.3em;
+            font-size: 1.4em;
             font-weight: bold;
-            color: #495057;
+            color: rgba(255, 255, 255, 0.95);
         }
         .performer-total {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 8px 16px;
-            border-radius: 20px;
+            padding: 10px 20px;
+            border-radius: 25px;
             font-weight: bold;
             font-size: 1.1em;
+            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
         }
         .fail-codes-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-            gap: 10px;
+            gap: 12px;
         }
         .fail-code-item {
-            background: #f8f9fa;
-            padding: 10px;
-            border-radius: 8px;
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(5px);
+            padding: 12px;
+            border-radius: 10px;
             text-align: center;
-            border: 2px solid #e9ecef;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            transition: all 0.3s;
+        }
+        .fail-code-item:hover {
+            background: rgba(102, 126, 234, 0.2);
+            border-color: rgba(127, 127, 213, 0.5);
+            transform: scale(1.05);
         }
         .fail-code-name {
             font-weight: bold;
-            color: #667eea;
-            margin-bottom: 4px;
+            color: #a8c0ff;
+            margin-bottom: 6px;
+            font-size: 0.95em;
         }
         .fail-code-count {
-            font-size: 1.2em;
-            color: #495057;
+            font-size: 1.4em;
+            color: rgba(255, 255, 255, 0.9);
+            font-weight: bold;
         }
         @media (max-width: 768px) {
             .controls {
