--- a/auditfailtracker.html
+++ b/auditfailtracker.html
@@ -600,8 +600,7 @@
             const performerData = {};
 
             data.forEach(row => {
-                // Look for name-like fields - adjust these based on your actual column names
-                const name = row['Team/Gang'] || row['Liam Harriet'] || 'Unknown';
+                const name = row['Team/Gang'] || 'Unknown';
                 
                 if (!performerData[name]) {
                     performerData[name] = {
