--- a/auditfailtracker.html
+++ b/auditfailtracker.html
@@ -508,10 +508,6 @@
                 r['Revisit required?'] && r['Revisit required?'].toLowerCase() === 'yes'
             ).length;
 
-            const revisitsCompleted = data.filter(r => 
-                r['Revisit completed'] && r['Revisit completed'].toLowerCase() === 'yes'
-            ).length;
-
             const statsHTML = `
                 <div class="stat-card">
                     <div class="stat-label">Total Incidents</div>
@@ -526,9 +522,8 @@
                     <div class="stat-value">${uniqueTeams}</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-label">Revisits</div>
-                    <div class="stat-value">${revisitsCompleted} / ${revisitsRequired}</div>
-                    <div style="font-size: 0.75em; opacity: 0.7; margin-top: 8px;">Completed / Required</div>
+                    <div class="stat-label">Revisits Required</div>
+                    <div class="stat-value">${revisitsRequired}</div>
                 </div>
             `;
             document.getElementById('stats').innerHTML = statsHTML;
@@ -600,7 +595,8 @@
             const performerData = {};
 
             data.forEach(row => {
-                const name = row['Team/Gang'] || 'Unknown';
+                // Look for name-like fields - adjust these based on your actual column names
+                const name = row['Team/Gang'] || row['Liam Harriet'] || 'Unknown';
                 
                 if (!performerData[name]) {
                     performerData[name] = {
