--- a/auditfailtracker.html
+++ b/auditfailtracker.html
@@ -609,7 +609,7 @@
             const performerData = {};
 
             data.forEach(row => {
-                const name = row['Team/Gang'] || 'Unknown';
+                const name = row['Team'] || 'Unknown';
                 
                 if (!performerData[name]) {
                     performerData[name] = {
