--- a/viewsurvey.html
+++ b/viewsurvey.html
@@ -372,7 +372,7 @@
         <header>
             <a href="teamview.html" class="logo">Pingu - Solar</a>
             <h1>Survey Viewer</h1>
-            <img src="https://www.dropbox.com/scl/fi/eors3cfuf62yinvdd5soi/ngu-icon.png?rlkey=0kgmwr92xqoxahbtjs0fvkjc4&st=7vrg0hat&dl=1" alt="Logo" class="pdf-logo" style="display: none; max-width: 250px; height: auto; margin: 1rem 0;">
+            <img src="https://www.dropbox.com/scl/fi/kkujm1u6y7vvnp7luq8d7/ngu-main-white.png?rlkey=kgq2uh48qh4xssh4vlbz868lr&st=107e50hs&dl=1" alt="Logo" class="pdf-logo" style="display: none; max-width: 250px; height: auto; margin: 1rem 0;">
         </header>
        
         <div class="controls">
