--- a/conductsurvey.html
+++ b/conductsurvey.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conduct Survey | Pingu - Solar</title>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.1.7/dist/signature_pad.umd.min.js"></script>
     <style>
         :root {
             --primary: #FF6B35;
@@ -459,6 +460,42 @@
         }
         .btn-secondary:hover {
             background: var(--dark) !important;
+        }
+
+        /* Signature Pad Styling */
+        .signature-container {
+            margin-top: 2rem;
+            background: var(--dark-lighter);
+            padding: 1.5rem;
+            border-radius: 12px;
+            border: 2px solid var(--dark-lighter);
+        }
+        .signature-pad-wrapper {
+            background: white;
+            border-radius: 8px;
+            width: 100%;
+            height: 200px;
+            margin: 1rem 0;
+            position: relative;
+        }
+        canvas {
+            width: 100%;
+            height: 100%;
+            touch-action: none;
+            cursor: crosshair;
+        }
+        .sig-actions {
+            display: flex;
+            justify-content: flex-end;
+        }
+        .clear-sig-btn {
+            background: var(--error);
+            color: white;
+            border: none;
+            padding: 0.5rem 1rem;
+            border-radius: 6px;
+            cursor: pointer;
+            font-family: 'Syne', sans-serif;
         }
      
         @media (max-width: 768px) {
