--- a/conductsurveyv2.html
+++ b/conductsurveyv2.html
@@ -1812,3 +1812,7 @@ window.firebaseModules = { collection, getDocs, query, where, doc, setDoc, ref, 
         form.addEventListener('input', saveProgress);
         document.getElementById('verify-btn').onclick = verifyJobNumber;
     });
+});
+</script>
+</body>
+</html>
