--- a/solarjobstracker.html
+++ b/solarjobstracker.html
@@ -5,28 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar Jobs Tracker</title>
     <style>
-        body { font-family: Arial, sans-serif; margin: 20px; }
-        table { border-collapse: collapse; width: 100%; margin-top: 20px; }
-        th, td { border: 1px solid #ddd; padding: 8px; text-align: left; }
-        th { background-color: #f2f2f2; }
-        #filter { margin-bottom: 10px; width: 100%; padding: 8px; }
-        .modal { display: none; position: fixed; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.4); }
-        .modal-content { background-color: #fefefe; margin: 15% auto; padding: 20px; border: 1px solid #888; width: 80%; }
-        .close { color: #aaa; float: right; font-size: 28px; font-weight: bold; }
-        .close:hover, .close:focus { color: black; text-decoration: none; cursor: pointer; }
+        body { font-family: Arial, Helvetica, sans-serif; margin: 20px; line-height: 1.5; }
+        h1 { margin-bottom: 15px; }
+        .controls { margin-bottom: 20px; }
+        table { 
+            border-collapse: collapse; 
+            width: 100%; 
+            margin-top: 10px; 
+            font-size: 0.95em;
+        }
+        th, td { 
+            border: 1px solid #ccc; 
+            padding: 9px 10px; 
+            text-align: left; 
+        }
+        th { 
+            background-color: #f5f5f5; 
+            position: sticky; 
+            top: 0; 
+            z-index: 1; 
+        }
+        tr:hover { background-color: #f9f9f9; cursor: pointer; }
+        #filter { 
+            width: 100%; 
+            max-width: 500px; 
+            padding: 10px; 
+            font-size: 1em; 
+        }
+        .modal { 
+            display: none; 
+            position: fixed; 
+            z-index: 1000; 
+            left: 0; 
+            top: 0; 
+            width: 100%; 
+            height: 100%; 
+            overflow: auto; 
+            background-color: rgba(0,0,0,0.5); 
+        }
+        .modal-content { 
+            background-color: white; 
+            margin: 8% auto; 
+            padding: 25px; 
+            border-radius: 8px; 
+            width: 85%; 
+            max-width: 900px; 
+            box-shadow: 0 4px 20px rgba(0,0,0,0.2); 
+        }
+        .close { 
+            color: #666; 
+            float: right; 
+            font-size: 36px; 
+            font-weight: bold; 
+            cursor: pointer; 
+        }
+        .close:hover { color: #000; }
+        .detail-grid { 
+            display: grid; 
+            grid-template-columns: 220px 1fr; 
+            gap: 8px 16px; 
+            margin-top: 15px; 
+        }
+        .detail-label { font-weight: bold; color: #444; }
     </style>
 </head>
 <body>
     <h1>Solar Jobs Tracker</h1>
-    <input type="file" id="csvFile" accept=".csv">
-    <input type="text" id="filter" placeholder="Filter by Job Number, Job Type, Install Type, etc...">
+    
+    <div class="controls">
+        <input type="file" id="csvFile" accept=".csv" />
+        <br><br>
+        <input type="text" id="filter" placeholder="Filter any column (Job Number, Type, Lead, Status, etc...)">
+    </div>
+
     <table id="jobsTable">
         <thead>
             <tr>
                 <th>Job Number</th>
                 <th>Job Type</th>
                 <th>Install Type</th>
-                <th>Complete on KF (Kraken)</th>
+                <th>Complete on KF</th>
                 <th>Compliance Checked</th>
                 <th>Issues Sent</th>
                 <th>Issues Resolved</th>
@@ -36,91 +94,97 @@
         <tbody></tbody>
     </table>
 
+    <!-- Modal for full job details -->
     <div id="detailsModal" class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Job Details</h2>
-            <div id="detailsContent"></div>
+            <span class="close">×</span>
+            <h2>Full Job Details</h2>
+            <div class="detail-grid" id="detailsContent"></div>
         </div>
     </div>
 
     <script>
         const csvFileInput = document.getElementById('csvFile');
-        const jobsTableBody = document.querySelector('#jobsTable tbody');
         const filterInput = document.getElementById('filter');
+        const tableBody = document.querySelector('#jobsTable tbody');
         const modal = document.getElementById('detailsModal');
-        const closeModal = document.querySelector('.close');
+        const closeBtn = document.querySelector('.close');
         const detailsContent = document.getElementById('detailsContent');
 
-        let allJobs = []; // Store all processed jobs
+        let allJobs = [];
 
-        csvFileInput.addEventListener('change', handleFileUpload);
-        filterInput.addEventListener('input', applyFilter);
-        closeModal.addEventListener('click', () => modal.style.display = 'none');
-        window.addEventListener('click', (event) => {
-            if (event.target === modal) modal.style.display = 'none';
-        });
+        csvFileInput.addEventListener('change', handleFile);
+        filterInput.addEventListener('input', filterTable);
+        closeBtn.addEventListener('click', () => modal.style.display = 'none');
+        window.addEventListener('click', e => { if (e.target === modal) modal.style.display = 'none'; });
 
-        function handleFileUpload(event) {
-            const file = event.target.files[0];
+        function handleFile(e) {
+            const file = e.target.files[0];
             if (!file) return;
 
             const reader = new FileReader();
-            reader.onload = function(e) {
-                const csvData = e.target.result;
-                const parsedData = parseCSV(csvData);
-                const processedData = processDuplicates(parsedData);
-                allJobs = processedData;
+            reader.onload = event => {
+                const csv = event.target.result;
+                const data = parseCSV(csv);
+                allJobs = processPostcodeDuplicates(data);
                 renderTable(allJobs);
             };
             reader.readAsText(file);
         }
 
-        function parseCSV(csv) {
-            const lines = csv.split(/\r?\n/);
-            const headers = lines[0].split(',').map(h => h.trim());
-            const data = [];
+        function parseCSV(csvText) {
+            const lines = csvText.split(/\r?\n/);
+            if (lines.length < 2) return [];
 
+            // Clean and normalize headers
+            const headers = lines[0].split(',').map(h => h.trim().replace(/\s+/g, ' '));
+
+            const result = [];
             for (let i = 1; i < lines.length; i++) {
                 if (!lines[i].trim()) continue;
                 const values = lines[i].split(',').map(v => v.trim());
                 const row = {};
-                headers.forEach((header, index) => {
-                    row[header] = values[index] || '';
+                headers.forEach((header, idx) => {
+                    row[header] = values[idx] || '';
                 });
-                data.push(row);
+                result.push(row);
             }
-            return data;
+            return result;
         }
 
-        function processDuplicates(data) {
-            const postcodeMap = new Map();
+        function processPostcodeDuplicates(data) {
+            const postcodeGroups = new Map();
 
-            // Group by postcode
+            // Group by Postcode
             data.forEach(job => {
-                const postcode = job['Postcode'] || '';
-                if (!postcodeMap.has(postcode)) {
-                    postcodeMap.set(postcode, []);
-                }
-                postcodeMap.get(postcode).push(job);
+                const postcode = (job['Postcode'] || '').trim().toUpperCase();
+                if (!postcode) return;
+                if (!postcodeGroups.has(postcode)) postcodeGroups.set(postcode, []);
+                postcodeGroups.get(postcode).push(job);
             });
 
-            // For each group, filter to prefer non-survey
-            const processed = [];
-            postcodeMap.forEach(group => {
-                const nonSurvey = group.filter(job => (job['Job Type'] || '').toLowerCase() !== 'survey');
-                if (nonSurvey.length > 0) {
-                    processed.push(...nonSurvey);
+            const finalJobs = [];
+
+            postcodeGroups.forEach(group => {
+                // Prefer any job that is NOT 'survey' in Job Type
+                const nonSurveyJobs = group.filter(job => 
+                    (job['Job Type'] || '').trim().toLowerCase() !== 'survey'
+                );
+
+                if (nonSurveyJobs.length > 0) {
+                    finalJobs.push(...nonSurveyJobs);
                 } else {
-                    processed.push(...group);
+                    // If all are surveys → keep them all (or just the first one - adjust as needed)
+                    finalJobs.push(group[0]);
                 }
             });
 
-            return processed;
+            return finalJobs;
         }
 
         function renderTable(jobs) {
-            jobsTableBody.innerHTML = '';
+            tableBody.innerHTML = '';
+
             jobs.forEach(job => {
                 const row = document.createElement('tr');
                 row.innerHTML = `
@@ -129,19 +193,29 @@
                     <td>${job['Booked Status'] || ''}</td>
                     <td>${job['Complete on KF'] || ''}</td>
                     <td>${job['Compliance Checked'] || ''}</td>
-                    <td>${[job['Issues Sent'], job['Issues Sent2'], job['Issues Sent3']].filter(Boolean).join(', ') || ''}</td>
+                    <td>${[
+                        job['Issues Sent'] || '',
+                        job['Issues Sent2'] || '',
+                        job['Issues Sent3'] || ''
+                    ].filter(Boolean).join(' • ') || '-'}</td>
                     <td>${job['Issues Resolved'] || ''}</td>
                     <td>${job['Lead'] || ''}</td>
                 `;
-                row.addEventListener('click', () => showDetails(job));
-                jobsTableBody.appendChild(row);
+
+                row.addEventListener('click', () => showJobDetails(job));
+                tableBody.appendChild(row);
             });
         }
 
-        function applyFilter() {
-            const filterText = filterInput.value.toLowerCase();
-            const filteredJobs = allJobs.filter(job => {
-                const fields = [
+        function filterTable() {
+            const term = filterInput.value.toLowerCase().trim();
+            if (!term) {
+                renderTable(allJobs);
+                return;
+            }
+
+            const filtered = allJobs.filter(job => {
+                return [
                     job['Job Number'],
                     job['Job Type'],
                     job['Booked Status'],
@@ -152,19 +226,30 @@
                     job['Issues Sent3'],
                     job['Issues Resolved'],
                     job['Lead']
-                ].map(f => (f || '').toLowerCase());
-                return fields.some(field => field.includes(filterText));
+                ].some(val => (val || '').toString().toLowerCase().includes(term));
             });
-            renderTable(filteredJobs);
+
+            renderTable(filtered);
         }
 
-        function showDetails(job) {
+        function showJobDetails(job) {
             detailsContent.innerHTML = '';
+
+            // Show ALL columns from the CSV in a nice grid
             Object.entries(job).forEach(([key, value]) => {
-                const p = document.createElement('p');
-                p.textContent = `${key}: ${value}`;
-                detailsContent.appendChild(p);
+                if (value === '') return; // skip empty
+
+                const label = document.createElement('div');
+                label.className = 'detail-label';
+                label.textContent = key;
+
+                const val = document.createElement('div');
+                val.textContent = value;
+
+                detailsContent.appendChild(label);
+                detailsContent.appendChild(val);
             });
+
             modal.style.display = 'block';
         }
     </script>
