--- a/solarjobstracker.html
+++ b/solarjobstracker.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sentinel | Solar Intelligence</title>
+    <title>Solar Intelligence</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -91,13 +91,13 @@
 <div class="container">
     <header>
         <div class="logo-area">
-            <h1>SENTINEL<span>.SOLAR</span></h1>
+            <h1><span>.SOLAR Jobs Tracker</span></h1>
         </div>
         <div style="text-align: right;">
             <label class="input-group" style="display:inline-block;">
                 <input type="file" id="csvFile" accept=".csv" style="display:none;">
                 <div style="background:var(--accent); color:white; padding:12px 24px; border-radius:12px; cursor:pointer; font-weight:600; font-size:0.9rem;">
-                    Initialize Upload
+                    Initialise Upload
                 </div>
             </label>
         </div>
