--- a/solarjobstracker.html
+++ b/solarjobstracker.html
@@ -108,8 +108,8 @@
         <div class="stat-card"><span class="label">Installs</span><span id="stat-solar" class="value">0</span></div>
         <div class="stat-card"><span class="label">Enphase</span><span id="stat-enphase" class="value" style="color:#60a5fa">0</span></div>
         <div class="stat-card"><span class="label">Tesla</span><span id="stat-tesla" class="value" style="color:#f87171">0</span></div>
-        <div class="stat-card"><span class="label">Fox ESS</span><span id="stat-fox" class="value" style="color:#fbbf24">0</span></div>
-        <div class="stat-card"><span class="label">KF Sync</span><span id="stat-kf" class="value" style="color:#34d399">0</span></div>
+        <div class="stat-card"><span class="label">Fox</span><span id="stat-fox" class="value" style="color:#fbbf24">0</span></div>
+        <div class="stat-card"><span class="label">KF Comp</span><span id="stat-kf" class="value" style="color:#34d399">0</span></div>
     </div>
     
     <div class="glass-panel">
