--- a/conductsurvey.html
+++ b/conductsurvey.html
@@ -684,7 +684,7 @@
                             <label for="gas-bonding-equipment" class="form-label">Equipment and Location of Bonding Required</label>
                             <input type="text" id="gas-bonding-equipment" class="form-input" placeholder="Describe equipment and location needed..." />
                         </div>
-                        <label class="form-label" style="margin-top: 1rem;">Upload Photo(s) of Gas Bonded</label>
+                        <label class="form-label required" style="margin-top: 1rem;">Upload Photo(s) of Gas Bonded</label>
                         <div class="file-upload-area" onclick="document.getElementById('gas-bonded-files').click()">
                             <div class="file-upload-icon">📸</div>
                             <div class="file-upload-text">Click to upload or drag and drop photos</div>
@@ -703,7 +703,7 @@
                             <label for="water-bonding-equipment" class="form-label">Equipment and Location of Bonding Required</label>
                             <input type="text" id="water-bonding-equipment" class="form-input" placeholder="Describe equipment and location needed..." />
                         </div>
-                        <label class="form-label" style="margin-top: 1rem;">Upload Photo(s) of Water Bonded</label>
+                        <label class="form-label required" style="margin-top: 1rem;">Upload Photo(s) of Water Bonded</label>
                         <div class="file-upload-area" onclick="document.getElementById('water-bonded-files').click()">
                             <div class="file-upload-icon">📸</div>
                             <div class="file-upload-text">Click to upload or drag and drop photos</div>
@@ -1161,7 +1161,7 @@
                     <div class="form-group">
                         <label for="lower-roofs" class="form-label">Lower Roofs - Are They Weight Bearing or To Be Avoided?</label>
                         <textarea id="lower-roofs" class="form-textarea" placeholder="Describe lower roofs..."></textarea>
-                        <label class="form-label" style="margin-top: 1rem;">Upload Photo(s) of Lower Roofs</label>
+                        <label class="form-label required" style="margin-top: 1rem;">Upload Photo(s) of Lower Roofs</label>
                         <div class="file-upload-area" onclick="document.getElementById('lower-roofs-files').click()">
                             <div class="file-upload-icon">📸</div>
                             <div class="file-upload-text">Click to upload or drag and drop photos</div>
