--- a/solarjobstracker.html
+++ b/solarjobstracker.html
@@ -148,7 +148,7 @@
                     <th>Job Type</th>
                     <th>Booked Date</th>
                     <th>Status</th>
-                    <th>KF Sync</th>
+                    <th>KF Complete</th>
                     <th>Compliance</th>
                     <th>Health</th>
                 </tr>
@@ -262,7 +262,7 @@
                 <td style="color:var(--text-dim)">${r['Job Type']}</td>
                 <td>${r['Booked Date'] || '---'}</td>
                 <td><span class="tag tag-tech">${r['Booked Status']}</span></td>
-                <td><span class="tag ${isCancelled ? 'tag-wait' : (kf ? 'tag-kf' : 'tag-wait')}">${isCancelled ? 'CANCELLED' : (kf ? 'SYNCED' : 'PENDING')}</span></td>
+                <td><span class="tag ${isCancelled ? 'tag-wait' : (kf ? 'tag-kf' : 'tag-wait')}">${isCancelled ? 'CANCELLED' : (kf ? 'COMPLETED' : 'PENDING')}</span></td>
                 <td>${r['Compliance Checked'] || '---'}</td>
                 <td><span class="dot" style="color:${r['Issues Sent'] ? '#f87171' : '#34d399'}"></span>${r['Issues Sent'] ? 'Issue' : 'Healthy'}</td>
             `;
