--- a/solarjobstracker.html
+++ b/solarjobstracker.html
@@ -101,11 +101,11 @@
         <div class="stat-card"><span class="label">Enphase</span><span id="stat-enphase" class="value" style="color:#60a5fa">0</span></div>
         <div class="stat-card"><span class="label">Tesla</span><span id="stat-tesla" class="value" style="color:#f87171">0</span></div>
         <div class="stat-card"><span class="label">Fox</span><span id="stat-fox" class="value" style="color:#fbbf24">0</span></div>
-        <div class="stat-card"><span class="label">KF Comp</span><span id="stat-kf" class="value" style="color:#34d399">0</span></div>
+        <div class="stat-card"><span class="label">KF Completed</span><span id="stat-kf" class="value" style="color:#34d399">0</span></div>
         <div class="stat-card"><span class="label">Cancelled</span><span id="stat-cancelled" class="value" style="color:#94a3b8">0</span></div>
-        <div class="stat-card"><span class="label">Comp Check: Y</span><span id="stat-comp-y" class="value" style="color:#34d399">0</span></div>
-        <div class="stat-card"><span class="label">Comp: Issues</span><span id="stat-comp-issues" class="value" style="color:#f87171">0</span></div>
-        <div class="stat-card"><span class="label">Comp: N/A</span><span id="stat-comp-na" class="value" style="color:#94a3b8">0</span></div>
+        <div class="stat-card"><span class="label">Comppliance Check: Y</span><span id="stat-comp-y" class="value" style="color:#34d399">0</span></div>
+        <div class="stat-card"><span class="label">Compliance: Issues</span><span id="stat-comp-issues" class="value" style="color:#f87171">0</span></div>
+        <div class="stat-card"><span class="label">Compliance: N/A</span><span id="stat-comp-na" class="value" style="color:#94a3b8">0</span></div>
     </div>
     
     <div class="glass-panel">
