--- a/solarjobstracker.html
+++ b/solarjobstracker.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solar Intelligence | Sentinel</title>
+    <title>Solar Intelligence</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.2/papaparse.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -107,8 +107,8 @@
         <div class="stat-card"><span class="label">KF Completed</span><span id="stat-kf" class="value" style="color:#34d399">0</span></div>
         <div class="stat-card"><span class="label">Cancelled</span><span id="stat-cancelled" class="value" style="color:#94a3b8">0</span></div>
         <div class="stat-card"><span class="label">Compliance: Y</span><span id="stat-comp-y" class="value" style="color:#34d399">0</span></div>
-        <div class="stat-card"><span class="label">Comp: Issues</span><span id="stat-comp-issues" class="value" style="color:#f87171">0</span></div>
-        <div class="stat-card"><span class="label">Comp: N/A</span><span id="stat-comp-na" class="value" style="color:#94a3b8">0</span></div>
+        <div class="stat-card"><span class="label">Compliance: Issues</span><span id="stat-comp-issues" class="value" style="color:#f87171">0</span></div>
+        <div class="stat-card"><span class="label">Compliance: N/A</span><span id="stat-comp-na" class="value" style="color:#94a3b8">0</span></div>
     </div>
     
     <div class="glass-panel">
