--- a/solarjobstracker.html
+++ b/solarjobstracker.html
@@ -136,7 +136,7 @@
             <div class="input-group"><label>Booked End</label><input type="date" id="endDate" onchange="runFilters()"></div>
             <div class="input-group" style="grid-column: span 1;">
                 <label>Command Search</label>
-                <input type="text" id="searchInput" placeholder="Job #, PC, Lead..." onkeyup="runFilters()">
+                <input type="text" id="searchInput" placeholder="Job #, lead..." onkeyup="runFilters()">
             </div>
             <div>
                 <button class="btn-reset" onclick="resetAll()">Reset All</button>
