--- a/solarjobstracker.html
+++ b/solarjobstracker.html
@@ -131,9 +131,9 @@
                 </select>
             </div>
             <div class="input-group">
-                <label>Booked Status (Brand)</label>
+                <label>Booked Status</label>
                 <select id="techFilter" onchange="runFilters()">
-                    <option value="">All Brands</option>
+                    <option value="">All Types</option>
                     <option value="Fox">Fox</option>
                     <option value="Enphase">Enphase</option>
                     <option value="Tesla">Tesla</option>
