--- a/solarjobstracker.html
+++ b/solarjobstracker.html
@@ -137,6 +137,7 @@
                     <option value="Fox">Fox</option>
                     <option value="Enphase">Enphase</option>
                     <option value="Tesla">Tesla</option>
+                    <option value="Panel Only">Panel Only</option>
                 </select>
             </div>
             <div class="input-group"><label>Booked Start</label><input type="date" id="startDate" onchange="runFilters()"></div>
